Fix spacing and favicon udpate

--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -662,6 +662,9 @@ video {
 .grid-cols-1{
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.flex-row{
+	flex-direction: row;
+}
 .flex-col{
 	flex-direction: column;
 }
@@ -699,6 +702,16 @@ video {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-x-8 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(2rem * var(--tw-space-x-reverse));
+	margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-hidden{
 	overflow: hidden;
@@ -852,6 +865,18 @@ video {
 	padding-left: 10%;
 	padding-right: 10%;
 }
+.px-4{
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.px-8{
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+.py-16{
+	padding-top: 4rem;
+	padding-bottom: 4rem;
+}
 .pr-4{
 	padding-right: 1rem;
 }
@@ -899,6 +924,10 @@ video {
 .text-3xl{
 	font-size: 1.875rem;
 	line-height: 2.25rem;
+}
+.text-4xl{
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .font-black{
 	font-weight: 900;
@@ -1014,10 +1043,53 @@ video {
 .group:hover .group-hover\:opacity-100{
 	opacity: 1;
 }
+@media (min-width: 640px){
+
+	.sm\:w-1\/2{
+		width: 50%;
+	}
+}
 @media (min-width: 768px){
+
+	.md\:mt-24{
+		margin-top: 6rem;
+	}
+
+	.md\:w-1\/2{
+		width: 50%;
+	}
 
 	.md\:grid-cols-2{
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:flex-col{
+		flex-direction: column;
+	}
+
+	.md\:space-x-12 > :not([hidden]) ~ :not([hidden]){
+		--tw-space-x-reverse: 0;
+		margin-right: calc(3rem * var(--tw-space-x-reverse));
+		margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+	}
+
+	.md\:p-24{
+		padding: 6rem;
+	}
+
+	.md\:px-24{
+		padding-left: 6rem;
+		padding-right: 6rem;
+	}
+
+	.md\:text-7xl{
+		font-size: 4.5rem;
+		line-height: 1;
+	}
+
+	.md\:text-3xl{
+		font-size: 1.875rem;
+		line-height: 2.25rem;
 	}
 }
 @media (min-width: 1024px){
